manifests/webenv.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: webenv
    version: v1
  name: webenv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webenv
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: webenv
    spec:
      containers:
      - image: webenv:0.1.0
        imagePullPolicy: IfNotPresent
        name: webenv
        ports:
        - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: webenv
    version: v1
  name: webenv
spec:
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: http-webenv
  selector:
    app: webenv
