manifests/02_webenv.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webenv
  labels:
    istio-injection: enabled

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: webenv
  namespace: webenv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webenv
      version: v1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: webenv
        version: v1
    spec:
      containers:
      - image: webenv:0.1.0
        imagePullPolicy: IfNotPresent
        name: webenv
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /echo
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 15
        livenessProbe:
          httpGet:
            path: /echo
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 15

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: webenv2
  namespace: webenv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webenv
      version: v2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: webenv
        version: v2
    spec:
      containers:
      - image: webenv:0.1.0
        imagePullPolicy: IfNotPresent
        name: webenv
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /echo
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 15
        livenessProbe:
          httpGet:
            path: /echo
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 15

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: webenv
  name: webenv
  namespace: webenv
spec:
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: http-webenv
  selector:
    app: webenv

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: webenv
  namespace: webenv
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 8080
      name: http-webenv
      protocol: HTTP
    hosts:
    - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: webenv
  namespace: webenv
spec:
  host: webenv
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webenv
  namespace: webenv
spec:
  hosts:
  - webenv
  gateways:
  - webenv
  http:
  - route:
    - destination:
        host: webenv
        subset: v1
        port:
          number: 8080
      weight: 90
    - destination:
        host: webenv
        subset: v2
        port:
          number: 8080
      weight: 10
